# KlarMieten

./: .gitignore  Dockerfile  build.sh  build_files.sh  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  vercel.json
backend/: .gitignore  contract.py  db.sqlite3  main.py  manage.py  pyproject.toml
backend/.run/: Darf Vermieter Das.run.xml
backend/accounts/: forms.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/templates/registration/: login.html  signup.html
backend/contract_analysis/: admin.py  analysis.py  mixins.py  models.py  tasks.py  urls.py  utils.py  views.py
backend/contract_analysis/migrations/: 0001_initial.py  0002_contractfile_file_size.py  0003_contract_archived_contract_archived_date.py  0003_contractdetails_neighborhood_description.py  0004_contractdetails_contract_text.py  0005_remove_contractdetails_additional_clauses_and_more.py  0006_rename_address_contractdetails_street_and_more.py  0007_remove_contractdetails_contract_text.py  0008_contracttext.py  0009_contractdetails_neighborhood.py
backend/contract_analysis/models/: contract.py  rent_index.py
backend/contract_analysis/static/css/: hero.css
backend/contract_analysis/templates/: contract.html  edit_contract.html  file_upload.html  home.html  landing.html  not_authed.html  pricing.html  upload_contract.html
backend/contract_analysis/templates/contract/: edit.html  (+3 more)
backend/contract_analysis/utils/: encryption.py  error.py  image.py  json.py  utils.py
backend/contract_analysis/views/: analysis.py  contract.py  upload.py
backend/darf_vermieter_das/: asgi.py  settings.py  urls.py  wsgi.py
backend/static/css/: button.css  global.css  main.css
backend/templates/: base.html  footer.html  navbar.html
(+135 files in other folders)
