[project]
name = "backend"
version = "0.1.0"
description = "Darf Vermieter Das?"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "cryptography>=44.0.1",
    "django>=5.1.6",
    "google-cloud-vision>=3.10.1",
    "google-genai>=1.2.0",
    "mistralai>=1.5.1",
    "pdf2image>=1.17.0",
    "pillow>=11.1.0",
    "psycopg>=3.2.6",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "python-dotenv>=1.0.1",
    "python-magic>=0.4.27",
    "whitenoise>=6.9.0",
]
